cmake_minimum_required(VERSION 3.21)

project(code_practice)
set(CMAKE_CXX_STANDARD 20)
add_executable(merge_sorted_arrays merge-sorted-arrays.cpp)
add_executable(remove_element remove-element.cpp)
add_executable(remove-duplicates-from-sorted-array remove-duplicates-from-sorted-array.cpp)
add_executable(majority-element majority-element.cpp)
add_executable(rotate-array rotate-array.cpp)
add_executable(best-time-to-buy-and-sell-stock-ii best-time-to-buy-and-sell-stock-ii.cpp)
add_executable(jump-game jump-game.cpp)
add_executable(h-index h-index.cpp)
add_executable(candy candy.cpp)
add_executable(climbing-stairs climbing-stairs.cpp)
add_executable(house-robber house-robber.cpp)
add_executable(search-in-rotated-sorted-array search-in-rotated-sorted-array.cpp)
add_executable(find-the-index-of-the-first-occurrence-in-a-string find-the-index-of-the-first-occurrence-in-a-string.cpp)
add_executable(longest-consecutive-sequence longest-consecutive-sequence.cpp)
add_executable(number-of-islands number-of-islands.cpp)
add_executable(summary-ranges summary-ranges.cpp)
add_executable(merge-intervals merge-intervals.cpp)
add_executable(insert-interval insert-interval.cpp)
add_executable(convert-sorted-array-to-binary-search-tree convert-sorted-array-to-binary-search-tree.cpp)
add_executable(sort-list sort-list.cpp)
add_executable(maximum-depth-of-binary-tree maximum-depth-of-binary-tree.cpp)
add_executable(implement-trie-prefix-tree implement-trie-prefix-tree.cpp)
add_executable(invert-binary-tree invert-binary-tree.cpp)
add_executable(same-tree same-tree.cpp)
add_executable(construct-binary-tree-from-preorder-and-inorder-traversal construct-binary-tree-from-preorder-and-inorder-traversal.cpp)
add_executable(flatten-binary-tree-to-linked-list  flatten-binary-tree-to-linked-list.cpp)
add_executable(kth-largest-element-in-an-array kth-largest-element-in-an-array.cpp)
add_executable(search-a-2d-matrix search-a-2d-matrix.cpp)
add_executable(binary-tree-right-side-view binary-tree-right-side-view.cpp)
add_executable(sum-root-to-leaf-numbers sum-root-to-leaf-numbers.cpp)
add_executable(max-points-on-a-line max-points-on-a-line.cpp)
add_executable(find-all-duplicates-in-an-array find-all-duplicates-in-an-array.cpp)
add_executable(kth-smallest-element-in-a-sorted-matrix kth-smallest-element-in-a-sorted-matrix.cpp)
add_executable(set-matrix-zeroes set-matrix-zeroes.cpp)
add_executable(target-sum target-sum.cpp)
add_executable(maximum-subarray maximum-subarray.cpp)
add_executable(maximum-product-subarray  maximum-product-subarray.cpp)
add_executable(count-of-range-sum count-of-range-sum.cpp)
add_executable(sliding-window-maximum sliding-window-maximum.cpp)
add_executable(find-median-from-data-stream find-median-from-data-stream.cpp)
add_executable(sliding-window-median sliding-window-median.cpp)
# I need to test this.
add_executable(contains-duplicate-ii contains-duplicate-ii.cpp)
add_executable(maximum-sum-circular-subarray maximum-sum-circular-subarray.cpp)
add_executable(best-time-to-buy-and-sell-stock best-time-to-buy-and-sell-stock.cpp)
add_executable(regular-expression-matching regular-expression-matching.cpp)
add_executable(arithmetic-slices arithmetic-slices.cpp)